# research-mcp

./: pyproject.toml
.claude/overviews/: source-overview.md
src/research_mcp/: cag.py  db.py  discovery.py  exa_verify.py  middleware.py  papers.py  preprints.py  server.py
tests/: test_db.py  test_discovery.py  test_server.py
